--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1349,6 +1349,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="showCurrentForex*(curs: seq[string])"><wbr />show<wbr />Current<wbr />Forex</a></li>
   <li><a class="reference" href="#showDfTable,Nf"
     title="showDfTable*(apfdata: Nf)"><wbr />show<wbr />Df<wbr />Table</a></li>
+  <li><a class="reference" href="#showQftable,Qf"
+    title="showQftable*(a: Qf)"><wbr />show<wbr />Qftable</a></li>
   <li><a class="reference" href="#presentValue,T,T,int,int"
     title="presentValue*[T](FV: T; r: T; m: int; t: int): float"><wbr />present<wbr />Value</a></li>
   <li><a class="reference" href="#presentValue,float,float,float,float"
@@ -1964,6 +1966,13 @@ head means oldest rows
 
 
 </dd>
+<dt id="showQftable"><a name="showQftable,Qf"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showQftable</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <span class="Identifier">Qf</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>showQftable</p>
+<p>shows all items of a Qf object </p>
+
+
+</dd>
 <dt id="presentValue"><a name="presentValue,T,T,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">presentValue</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">FV</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">r</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">m</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">t</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span></pre></dt>
 <dd>
 <p>presentValue</p>
@@ -2154,7 +2163,7 @@ msggb<pre class = "listing"><span class="Identifier">msggb</span><span class="Pu
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-20 21:34:48 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-21 10:55:11 UTC</small>
       </div>
     </div>
   </div>
