--- a/private.html
+++ b/private.html
@@ -1212,6 +1212,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getTerminalWidth,"
     title="getTerminalWidth*(): int"><wbr />get<wbr />Terminal<wbr />Width</a></li>
+  <li><a class="reference" href="#clearup,int"
+    title="clearup*(x: int = 80)"><wbr />clearup</a></li>
   <li><a class="reference" href="#printTuple,"
     title="printTuple*(xs: tuple): string"><wbr />print<wbr />Tuple</a></li>
   <li><a class="reference" href="#rainbow,string"
@@ -1454,6 +1456,13 @@ check execution timing with one line see doFinish
 <p>utility to easily draw correctly sized lines on linux terminals</p>
 <p>and get linux get terminal width</p>
 <p>for windows this currently is set to terminalwidth 80 </p>
+
+
+</dd>
+<dt id="clearup"><a name="clearup,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">clearup</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">80</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>clearup</p>
+<p>a convenience proc to clear monitor </p>
 
 
 </dd>
@@ -1895,7 +1904,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-25 15:53:05 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-26 14:49:32 UTC</small>
       </div>
     </div>
   </div>
