--- a/private.html
+++ b/private.html
@@ -1262,6 +1262,12 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="plusDays*(aDate: string; days: int): string"><wbr />plus<wbr />Days</a></li>
   <li><a class="reference" href="#minusDays,string,int"
     title="minusDays*(aDate: string; days: int): string"><wbr />minus<wbr />Days</a></li>
+  <li><a class="reference" href="#getFirstMondayYear,string"
+    title="getFirstMondayYear*(ayear: string): string"><wbr />get<wbr />First<wbr />Monday<wbr />Year</a></li>
+  <li><a class="reference" href="#getFirstMondayYearMonth,string"
+    title="getFirstMondayYearMonth*(aym: string): string"><wbr />get<wbr />First<wbr />Monday<wbr />Year<wbr />Month</a></li>
+  <li><a class="reference" href="#getNextMonday,string"
+    title="getNextMonday*(adate: string): string"><wbr />get<wbr />Next<wbr />Monday</a></li>
   <li><a class="reference" href="#handler,"
     title="handler*()"><wbr />handler</a></li>
   <li><a class="reference" href="#superHeader,string"
@@ -1631,6 +1637,29 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 
 
 </dd>
+<dt id="getFirstMondayYear"><a name="getFirstMondayYear,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getFirstMondayYear</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">ayear</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>getFirstMondayYear</p>
+<p>returns date of first monday of any given year</p>
+<pre class = "listing"><span class="Identifier">echo</span>  <span class="Identifier">getFirstMondayYear</span><span class="Punctuation">(</span><span class="StringLit">&quot;2015&quot;</span><span class="Punctuation">)</span></pre>
+
+</dd>
+<dt id="getFirstMondayYearMonth"><a name="getFirstMondayYearMonth,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getFirstMondayYearMonth</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">aym</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>getFirstMondayYearMonth</p>
+<p>returns date of first monday in given year and month</p>
+<pre class = "listing"><span class="Identifier">echo</span>  <span class="Identifier">getFirstMondayYearMonth</span><span class="Punctuation">(</span><span class="StringLit">&quot;2015-12&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">echo</span>  <span class="Identifier">getFirstMondayYearMonth</span><span class="Punctuation">(</span><span class="StringLit">&quot;2015-06&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">echo</span>  <span class="Identifier">getFirstMondayYearMonth</span><span class="Punctuation">(</span><span class="StringLit">&quot;2015-2&quot;</span><span class="Punctuation">)</span></pre><p>in case of invalid dates nil will be returned </p>
+
+
+</dd>
+<dt id="getNextMonday"><a name="getNextMonday,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getNextMonday</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span class="Identifier">getNextMonday</span><span class="Punctuation">(</span><span class="Identifier">getDateStr</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre><p>in case of invalid dates nil will be returned </p>
+
+
+</dd>
 <dt id="handler"><a name="handler,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">handler</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">noconv</span><span class="Other">.}</span></pre></dt>
 <dd>
 <p>handler</p>
@@ -1904,7 +1933,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-27 10:31:53 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-28 21:49:23 UTC</small>
       </div>
     </div>
   </div>
