--- a/private.html
+++ b/private.html
@@ -1166,6 +1166,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="tw* = getTerminalWidth()"><wbr />tw</a></li>
   <li><a class="reference" href="#aline"
     title="aline* = repeat(&quot;-&quot;, tw)"><wbr />aline</a></li>
+  <li><a class="reference" href="#tw_2"
+    title="tw* = 80"><wbr />tw</a></li>
+  <li><a class="reference" href="#aline_2"
+    title="aline* = repeat(&quot;-&quot;, tw)"><wbr />aline</a></li>
 
   </ul>
 </li>
@@ -1372,6 +1376,16 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 
 </dd>
 <dt id="aline"><a name="aline"></a><pre><span class="Identifier">aline</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">repeat</span><span class="Other">(</span><span class="StringLit">&quot;-&quot;</span><span class="Other">,</span> <span class="Identifier">tw</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="tw"><a name="tw_2"></a><pre><span class="Identifier">tw</span><span class="Operator">*</span> <span class="Other">=</span> <span class="DecNumber">80</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="aline"><a name="aline_2"></a><pre><span class="Identifier">aline</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">repeat</span><span class="Other">(</span><span class="StringLit">&quot;-&quot;</span><span class="Other">,</span> <span class="Identifier">tw</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
@@ -1933,7 +1947,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-28 21:49:23 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-31 20:36:47 UTC</small>
       </div>
     </div>
   </div>
