--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1225,6 +1225,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="tw* = getTerminalWidth()"><wbr />tw</a></li>
   <li><a class="reference" href="#aline"
     title="aline* = repeat(&quot;-&quot;, tw)"><wbr />aline</a></li>
+  <li><a class="reference" href="#tw_2"
+    title="tw* = 80"><wbr />tw</a></li>
+  <li><a class="reference" href="#aline_2"
+    title="aline* = repeat(&quot;-&quot;, tw)"><wbr />aline</a></li>
 
   </ul>
 </li>
@@ -1538,6 +1542,16 @@ Currencies type is a simple object to hold current currency data
 
 </dd>
 <dt id="aline"><a name="aline"></a><pre><span class="Identifier">aline</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">repeat</span><span class="Other">(</span><span class="StringLit">&quot;-&quot;</span><span class="Other">,</span> <span class="Identifier">tw</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="tw"><a name="tw_2"></a><pre><span class="Identifier">tw</span><span class="Operator">*</span> <span class="Other">=</span> <span class="DecNumber">80</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="aline"><a name="aline_2"></a><pre><span class="Identifier">aline</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">repeat</span><span class="Other">(</span><span class="StringLit">&quot;-&quot;</span><span class="Other">,</span> <span class="Identifier">tw</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
@@ -2187,7 +2201,7 @@ msggb<pre class = "listing"><span class="Identifier">msggb</span><span class="Pu
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-28 13:26:19 UTC</small>
+        <small>Made with Nim. Generated: 2015-08-03 22:25:25 UTC</small>
       </div>
     </div>
   </div>
